--- a/unicenta source/src/main/resources/American/locales/pos_messages_en_US.properties
+++ b/unicenta source/src/main/resources/American/locales/pos_messages_en_US.properties
@@ -322,6 +322,7 @@ Menu.CustomersManagement=Customers
 Menu.CustomersPayment=Customer Payment
 Menu.CustomersReport=Customers (Card Style)
 
+Menu.ERPConfig=Configuration
 Menu.ERPOrders=Export Transactions
 Menu.ERPProducts=Import Products
 Menu.Exit=Logout
@@ -342,7 +343,6 @@ Menu.Locations=Locations
 
 Menu.Main=Main
 Menu.Maintenance=Maintenance
-Menu.Maintenance.ERP=Frontaccounting ERP
 Menu.Maintenance.POS=Point Of Sale
 Menu.Maintenance.Reports=Reports
 
@@ -353,6 +353,7 @@ Menu.ProductLabels=Product Labels
 Menu.Products=Products
 Menu.ProductSales=Product Sales
 Menu.ProductsWarehouse=Product Location
+Menu.PushToMETRC=Push to METRC
 
 Menu.Reports=Reports
 Menu.ReportTaxes=Tax Summary
@@ -387,6 +388,7 @@ Menu.Top10Sales=Top 10 Sales
 Menu.Users=Users
 Menu.UsersReport=Users
 Menu.UserSells=Sales by User
+Menu.Utilities.ERP=Frontaccounting ERP
 
 message.BadPassword=Invalid Password. Please Retry
 
