--- a/unicenta source/src/main/resources/Albanian/locales/pos_messages_al_SQ.properties
+++ b/unicenta source/src/main/resources/Albanian/locales/pos_messages_al_SQ.properties
@@ -451,7 +451,7 @@ Menu.Locations=Lokacioni
 
 Menu.Main=Shitja
 Menu.Maintenance=Mirembajtja
-Menu.Maintenance.ERP=Frontaccounting ERP
+Menu.Utilities.ERP=Frontaccounting ERP
 Menu.Maintenance.POS=Point Of Sale
 Menu.Maintenance.Reports=Raportet
 Menu.MissingData=Missing Data or Bad Price in File
