add do you want to push to METRC? message

--- a/unicenta source/src/main/resources/American/locales/pos_messages_en_US.properties
+++ b/unicenta source/src/main/resources/American/locales/pos_messages_en_US.properties
@@ -476,6 +476,7 @@ message.updatedatabase=<html>A database from a previous version has been detecte
 message.wannaclosecash=Are you sure you want to Close Cash?
 message.wannadelete=Are you sure you want to Delete the current Order?
 message.wannasave=Save changes before exit?
+message.wannapushmetrc=Are you sure you want to push to METRC?
 
 payment.title=Payment
 
@@ -532,7 +533,7 @@ transpayment.paperout=Coupon
 transpayment.debt=Debt
 transpayment.debtpaid=Debt Paid
 
-Visor.Title=uniCenta oPOS
+Visor.Title=WombatPOS
 
 # Employee Presence Management
 Menu.Leaves=Leaves
