change message properties

--- a/unicenta source/src/main/resources/English/locales/pos_messages.properties
+++ b/unicenta source/src/main/resources/English/locales/pos_messages.properties
@@ -107,7 +107,6 @@ Menu.Leaves=Leaves
 Menu.Locations=Locations
 Menu.Main=Register
 Menu.Maintenance=Maintenance
-Menu.Maintenance.ERP=Frontaccounting ERP
 Menu.Maintenance.POS=Point Of Sale
 Menu.Maintenance.Reports=Reports
 Menu.MissingData=Missing Data or Bad Price in File
@@ -163,11 +162,12 @@ Menu.UserSells=Sales by User
 Menu.Users=Users
 Menu.UsersReport=Users
 Menu.Utilities=Utilities
+Menu.Utilities.ERP=Frontaccounting ERP
 Menu.UtilityOptions=Utilities Options
 Printer.Null=Printer Not Available
 Printer.Screen=Screen Printer
 Printer.Serial=Ticket Printer
-Visor.Title=uniCenta oPOS
+Visor.Title=WombatPOS
 
 button.Discount=Discount
 button.ExecuteChart=Execute Chart
