--- a/unicenta source/src/main/resources/vpn_messages_en_US.properties
+++ b/unicenta source/src/main/resources/vpn_messages_en_US.properties
@@ -23,21 +23,21 @@
 #    along with uniCenta oPOS.  If not, see <http://www.gnu.org/licenses/>.
 
 label.configvpn=VPN Configuration
-label.vpnurl=OpenVPN Configuration File
-label.vpnid=Detection IP URL
-label.vpnorg=Refresh real IP every
-label.vpnpos=Refresh faked IP every
-label.vpnuser=User
+label.vpnfile=OpenVPN Configuration File
+label.vpnURL=Detection IP URL
+label.vpnupdr=Refresh real IP interval (sec)
+label.vpnupdf=Refresh faked IP interval (sec)
+label.vpnuser=Username
 label.vpnpassword=Password
-message.urlnotdefined=Synchronization service URL has not been defined.
-message.syncordersok=The orders synchronization has been successful.
-message.syncordersinfo={0} orders synchronized.
-message.syncproductsok=The data synchronization has been successful.
-message.syncproductsinfo={0} products synchronized.\n{1} customers synchronized.
-message.remoteexception=Communication error.
-message.serviceexception=Cannot connect to the service.
-message.malformedurlexception=The service URL is wrong.
-message.returnnull=Synchronization parameters are wrong.
-message.zeroproducts=There are no data to synchronize.
-message.zeroorders=There are no orders to synchronize.
-message.propsnotdefined=The synchronization properties resource "openbravo.properties" has not been defined.
+# message.urlnotdefined=Synchronization service URL has not been defined.
+# message.syncordersok=The orders synchronization has been successful.
+# message.syncordersinfo={0} orders synchronized.
+# message.syncproductsok=The data synchronization has been successful.
+# message.syncproductsinfo={0} products synchronized.\n{1} customers synchronized.
+# message.remoteexception=Communication error.
+# message.serviceexception=Cannot connect to the service.
+# message.malformedurlexception=The service URL is wrong.
+# message.returnnull=Synchronization parameters are wrong.
+# message.zeroproducts=There are no data to synchronize.
+# message.zeroorders=There are no orders to synchronize.
+# message.propsnotdefined=The synchronization properties resource "openbravo.properties" has not been defined.
