add option to reprint close cash ticket in case of printing issues

--- a/WombatPOS/src/main/resources/American/locales/pos_messages_en_US.properties
+++ b/WombatPOS/src/main/resources/American/locales/pos_messages_en_US.properties
@@ -474,6 +474,7 @@ message.title=Cash Register message
 message.updatedatabase=<html>A database from a previous version has been detected. The database will be upgraded automatically.<br>DATA MAY BE LOST. FIRST CREATE A BACKUP.<br>Do you want to continue?
 
 message.wannaclosecash=Are you sure you want to Close Cash?
+message.wannaclosecashreprint=Would you like to reprint the Close Cash ticket?
 message.wannadelete=Are you sure you want to Delete the current Order?
 message.wannasave=Save changes before exit?
 message.wannapushmetrc=Are you sure you want to push to METRC?
