add iButton label to pos_messages_en_US.properties

--- a/WombatPOS/src/main/resources/pos_messages_en_US.properties
+++ b/WombatPOS/src/main/resources/pos_messages_en_US.properties
@@ -147,6 +147,7 @@ label.firstname=First Name
 label.floorid=ID
 label.floorname=Floor
 
+label.iButton=iButton
 label.image=Image
 Label.InputCash=Given
 label.integer=Integer
