add ibutton message values to pos_messages.properties

--- a/WombatPOS/src/main/resources/American/locales/pos_messages_en_US.properties
+++ b/WombatPOS/src/main/resources/American/locales/pos_messages_en_US.properties
@@ -428,6 +428,9 @@ message.databaseconnectionerror=Unable to connect to database: Database not avai
 message.databasedrivererror=Unable to connect to database: Database driver not found
 message.databasenotsupported=Database "{0}" not supported
 
+message.ibuttonnew=Press iButton to reader to continue.
+message.ibuttonremove=iButton value will be removed. Do you want to continue?
+
 message.mergetable=Merge Tables
 message.mergetablequestion=Are you sure you want to Merge Tables?
 
