--- a/WombatPOS/src/main/resources/English/locales/pos_messages.properties
+++ b/WombatPOS/src/main/resources/English/locales/pos_messages.properties
@@ -559,6 +559,8 @@ message.databasedrivererror=Unable to connect to database: Database driver not f
 message.databasenotsupported=Database "{0}" not supported
 message.databasesuccess=<html><h2>You're Connected!</h2><br> Restart uniCenta oPOS to load your Database Connection
 message.databaseconnectsuccess=<html><h2>You're Connected!</h2><br>You're ready to migrate your existing Database
+message.ibuttonnew=Connect iButton to reader and press Yes to continue or press No to cancel.
+message.ibuttonremove=iButton value will be cleared. Do you want to continue?
 message.invalidenddate=End Date cannot be set before System or Start Date
 message.invalidstartdate=Start Date cannot be before System Date
 message.leavecontrol=is on leave. To check In: contact your Manager to Cancel leave
