--- a/WombatPOS/src/main/resources/pos_messages_en_US.properties
+++ b/WombatPOS/src/main/resources/pos_messages_en_US.properties
@@ -426,6 +426,9 @@ message.databaseconnectionerror=Unable to connect to database: Database not avai
 message.databasedrivererror=Unable to connect to database: Database driver not found
 message.databasenotsupported=Database "{0}" not supported
 
+message.ibuttonnew=Connect iButton to reader and press Yes to continue or press No to cancel.
+message.ibuttonremove=iButton value will be cleared. Do you want to continue?
+
 message.mergetable=Merge Tables
 message.mergetablequestion=Are you sure you want to Merge Tables?
 
